--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "",
   "dependencies": {
     "async": "~0.2.8",
-    "express": "~3.2.4"
+    "express": "~3.2.4",
+    "ramda": "^0.25.0",
+    "uuid": "^3.1.0"
   }
 }
