--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "repository": "",
   "author": "",
   "dependencies": {
-    "async": "~0.2.8",
     "express": "~3.2.4",
     "ramda": "^0.25.0",
+    "random-seed": "^0.3.0",
     "uuid": "^3.1.0"
   }
 }
